# alei

./: 3point_dot.cpp  3point_plotter.py  CMakeLists.txt  CP-koopman1.csv  CameraRecordPlotting.py  CameraRecording.csv  Camera_V2.1.py  Cameratest.py  DTW_test.py  FKtest.py  IK_pos.cpp  IK_pos_cl.cpp  KO_calc.cpp  KO_test.cpp  KoopmanOperator.py  LICENSE  LQR_KO_twolink.cpp  LQR_twolink.cpp  Move_T.py  README.md  al-quad.cpp  calibration_evalu.csv  camera_lowpassfilter.py  data2pdf_KL_plotter.py  data2pdf_seg_plotter.py  data2pdftest.cpp  data2pdftest_KL.cpp  data2pdftest_auto.cpp  data2pdftestplotter.py  dkl_dotplotter.py  dklsac_cube.cpp  dklsac_dot.cpp  dklsac_doubleint.cpp  errsac_KO_twolink.cpp  errsac_koopquad.cpp  f8IKdata_plotter.py  figure8.cpp  figure8_IK.cpp  figure8_lqr.cpp  handeye_cali_result_plot.py  (+7 more)
koopman-op/: al-quad.cpp  errsac_koopman_cp.cpp  quad-plot.py  sacquad-plot.py
src/: ActLearnK.hpp  LQR.hpp  SAC.hpp  data2pdf.hpp  data2pdf_KL.hpp  data2pdf_auto.hpp  dkl_cost.hpp  dkl_cost_cube.cpp  dkl_cost_cube.hpp  dkl_cost_multidim.hpp  dkl_cost_pdf.hpp  dot_model.hpp  doubleint.hpp  error_cost_IK.hpp  f8traj_IK.hpp  k_medoids.hpp  koopsys.hpp  linear.hpp  linearbasis.hpp  traj_IK.hpp
